--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,7 +18,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #25c2a0;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
@@ -27,4 +27,29 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+/* .navbar {
+  background-color: rgb(248, 246, 246);
+} */
+
+.navbar__items {
+  justify-content: center;
+  position: relative;
+}
+.navbar__brand {
+  position: absolute;
+  left: 0;
+}
+.navbar__inner .navbar__items:nth-child(1) .navbar__item{
+  transform: translate(65px);
+}
+/* .navbar__link {
+  margin: 0 auto;
+} */
+
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0px;
+  /* background: transparent; */
 }
