--- a/src/pages/timeLine.scss
+++ b/src/pages/timeLine.scss
@@ -42,29 +42,37 @@ main {
       &:not(:first-child) {
         margin-top: -120px;
       }
-      .title {
-        font-size: 30px;
-        margin-bottom: 12px;
-        position: relative;
-        color: var(--ifm-font-color-base);
-        &:before {
-          content: "";
-          position: absolute;
-          width: 8px;
-          height: 8px;
-          border: 4px solid var(--ifm-font-color-base);
-          background-color: transparent;
-          border-radius: 100%;
-          top: 50%;
-          transform: translateY(-50%);
-          right: -73px;
+      .titleWrap{
+        .title {
+          font-size: 30px;
+          margin-bottom: 12px;
+          position: relative;
+          color: var(--ifm-font-color-base);
+          &:before {
+            content: "";
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            border: 4px solid var(--ifm-font-color-base);
+            background-color: transparent;
+            border-radius: 100%;
+            top: 50%;
+            transform: translateY(-50%);
+            right: -73px;
+          }
+          &.big:before {
+            width: 24px;
+            height: 24px;
+            transform: translate(8px, -50%);
+          }
         }
-        &.big:before {
-          width: 24px;
-          height: 24px;
-          transform: translate(8px, -50%);
+        .time{
+          font-size: 14px;
+          color: var(--ifm-color-secondary-darkest);
+          margin-bottom: 10px;
         }
       }
+
       .body {
         color: var(--ifm-color-secondary-darkest);
         display: flex;
@@ -74,7 +82,6 @@ main {
           line-height: 1.4em;
           flex-grow: 1;
           width: 50%;
-          margin: 0 20px;
           overflow: hidden;
           display: -webkit-box;
           -webkit-box-orient: vertical;
