--- a/src/pages/timeLine.scss
+++ b/src/pages/timeLine.scss
@@ -86,6 +86,7 @@ main {
           display: -webkit-box;
           -webkit-box-orient: vertical;
           -webkit-line-clamp: 6;
+          margin: 0 10px;
         }
         .imgWrap {
           flex-grow: 1;
