--- a/src/pages/timeLine.css
+++ b/src/pages/timeLine.css
@@ -97,6 +97,7 @@ main {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6;
+  margin: 0 10px;
 }
 
 .timeLine-container .entries .entry .body .imgWrap {
